# ai-harness

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASES.md  SECURITY.md  fly.toml  package.json  pnpm-lock.yaml  pyproject.toml  railway.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: canary-replay.yml  ci.yml  deploy-dev.yml  deploy-prod.yml  deploy.yml  healthcheck.yml  issue-labeler.yml  planner.yml  pr-describer.yml  pr-rebase-before-merge.yml  product-analyzer.yml  product-manager.yml  release-notes.yml  reviewer.yml  rollback-watch.yml  stale.yml  test-dev.yml  test-prod.yml  triager.yml
.mcp/: ai-harness.json
agents/: pyproject.toml
agents/knowledge/: known_false_positives.yaml
agents/src/agents/: canary.py  cli.py  deploy_gate.py  deployer.py  healthcheck.py  issue_labeler.py  mcp_server.py  merge_gate.py  planner.py  pr_describer.py  pr_priority.py  product_analyzer.py  product_manager.py  release_notes.py  reviewer.py  smart_rollback.py  stale.py  test_triage.py  triager.py
agents/src/agents/lib/: anthropic.py  email.py  gh.py  github_models.py  kill_switch.py  labels.py  planner_validate.py  product_state.py  prompts.py  sentry.py  skills.py  tool_executors.py
agents/src/agents/lib/prompts/: deploy_gate.md  healthcheck.md  healthcheck_summary.md  issue_labeler.md  merge_gate.md  planner.md  pr_describer.md  pr_priority.md  product_analyzer.md  product_manager.md  release_notes.md  reviewer_deps.md  reviewer_quality.md  reviewer_security.md  smart_rollback.md  test_triage.md  triager.md  triager_severity.md
agents/tests/: test_anthropic.py  test_canary.py  test_cli.py  test_deploy_gate.py  test_deployer.py  test_email.py  test_gh.py  test_github_models.py  test_github_models_tools.py  test_healthcheck.py  test_issue_labeler.py  test_kill_switch.py  test_knowledge.py  test_labels.py  test_mcp_server.py  test_merge_gate.py  test_planner.py  test_planner_validate.py  test_pr_describer.py  test_pr_priority.py  test_product_analyzer.py  test_product_manager.py  test_product_state.py  test_prompts.py  test_release_notes.py  test_reviewer.py  test_sentry.py  test_sentry_client.py  test_skills.py  test_smart_rollback.py  test_stale.py  test_test_triage.py  test_triager.py
agents/tests/fixtures/: pr_diff_sample.txt  sentry_issues_sample.json
apps/api/: pyproject.toml
apps/api/src/api/: __init__.py  agents.py  flags.py  hello.py  main.py  security.py  sentry.py  status.py  time.py  version.py  whoami.py
apps/api/tests/: test_agents.py  test_echo.py  test_flags.py  test_hello.py  test_ping.py  test_security.py  test_sentry.py  test_status.py  test_time.py  test_version.py  test_whoami.py
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/e2e/: ping.spec.ts
apps/web/src/: App.test.tsx  App.tsx  Dashboard.test.tsx  Dashboard.tsx  main.tsx  sentry.ts  useFlag.ts
apps/web/tests/: AdminDashboard.test.tsx
docs/product/: state.yaml  vision.md
docs/superpowers/plans/: 2026-04-14-autonomous-product-loop.md  2026-04-14-phase-1-foundation.md  2026-04-14-phase-10-stale-closer.md  2026-04-14-phase-2-agent-lib.md  2026-04-14-phase-3-pr-reviewer.md  2026-04-14-phase-4-planner.md  2026-04-14-phase-5-rollback-watch.md  (+5 more)
scripts/: onboard.sh  set-railway-token.sh
tests/: test_api_hello.py
(+1 files in other folders)
