[project]
name = "ai-harness"
version = "0.0.0"
description = "Solo 24/7 AI development harness"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["apps/api", "agents"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML>=6",
    "pre-commit>=4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["api", "agents"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "agents/tests"]
