[project]
name = "agents"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1",
    "PyGithub>=2.4",
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.hatch.build.targets.wheel.force-include]
"src/agents/lib/prompts" = "agents/lib/prompts"
